docs: more controls updating

--- a/docs/Security-Compliance/Security-Controls/ir/ir-02.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-02.md
@@ -12,10 +12,10 @@ b. Review and update incident response training content [ACF-defined frequency] 
 
 ## OPS Implementation
 
-OPS coordinates with ACF/OCIO and OPRE Administration to conduct requisite training.
+ACF Tech conducts incident response training for OPS users. OPS leverages ACF Tech Incident Response training programs.
 
 ### Control Origination
 
-Inherit from ACF OCIO
+Inherit from ACF Tech
 
 ### Related Content
