--- a/docs/Security-Compliance/Security-Controls/ir/ir-03-2.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-03-2.md
@@ -5,10 +5,10 @@ Coordinate incident response testing with organizational elements [(e.g. physica
 
 ## OPS Implementation
 
-OPS coordinates with ACF/OCIO, cloud.gov, and any external parties involved in incident response handling.
+OPS Incident Response Testing is in coordination with other plans such as Configuraiton Management and other documents part of the OPS ATO package. In addition, OPS Incident Response Plan takes into consideration guidance from ACF Tech and HHS Incident Response Team. 
 
 ### Control Origination
 
-Hybrid with ACF/OCIO and cloud.gov
+Hybrid with ACF Tech
 
 ### Related Content
