--- a/docs/Security-Compliance/Security-Controls/ir/ir-03.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-03.md
@@ -6,10 +6,10 @@ Test the effectiveness of the incident response capability for the system [At le
 
 ## OPS Implementation
 
-OPS coordinates with cloud.gov, ACF/OCIO, and OPRE Administration to conduct requisite IR testing.
+OPS has conducted Incident Response tests in the presence of our assigned ACF Tech ISSO. The test result has been documented in our Incident Response Plan documentation.
 
 ### Control Origination
 
-Hybrid with ACF OCIO and cloud.gov
+Hybrid with ACF Tech
 
 ### Related Content
