--- a/docs/Security-Compliance/Security-Controls/ir/ir-04.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-04.md
@@ -11,7 +11,12 @@ d. Ensure the rigor, intensity, scope, and results of incident handling activiti
 
 ## OPS Implementation
 
-The OPS Incident Response Plan addresses these matters and is part of the ATO package.
+Part (a): OPS has implemented an incident handling capability in line with the OPS Incident Response Plan which includes preparation, detection and analysis, containment, eradication, and recovery. <br />
+Part (b):  All OPS incident handling activities will be handled in coordination with the OPS CP activities, the ACF Incident Response Team (IRT), the HHS Computer Security Incident Response Center (CSIRC) and Azure cloud. <br />
+Part (c):  Lessons learned are incorporated into the Incident Handling procedures as part of the IRP.<br />
+Part (d): OPS will follow the HHS and ACF Incident Response Policies and procedures to meet the required leveled of rigor, intensity, scope, and results of incident handling activities. <br /><br />
+
+Incidents related to the infrastructure and security of the Azure Cloud and AMS solutions are detailed in their respective SSPs. Please also note, the OPS Incident Response Plan addresses all parts of this control in greater detail and is part of the ATO package.
 
 ### Control Origination
 
