--- a/docs/Security-Compliance/Security-Controls/ir/ir-07-1.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-07-1.md
@@ -5,10 +5,10 @@ Increase the availability of incident response information and support using [AC
 
 ## OPS Implementation
 
-TODO: ??? what is the ACF-defined mechanism.... ?
+ACF Tech centrally manages Incident Response activities
 
 ### Control Origination
 
-Hybrid with IaaS vendor and ACF Tech
+ACF Tech
 
 ### Related Content
