--- a/docs/Security-Compliance/Security-Controls/ir/ir-07.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-07.md
@@ -5,10 +5,10 @@ Provide an incident response support resource, integral to the organizational in
 
 ## OPS Implementation
 
-TODO: Work with ACF Tech and IaaS vendor on identifying support resources
+ACF Tech centrally manages Incident Response activities
 
 ### Control Origination
 
-Inherit from ACF/OCIO and cloud.gov
+ACF Tech
 
 ### Related Content
