--- a/docs/Security-Compliance/Security-Controls/ir/ir-08.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-08.md
@@ -24,11 +24,11 @@ e. Protect the incident response plan from unauthorized disclosure and modificat
 
 ## OPS Implementation
 
-TODO: Work in coordination with ACF Tech and cloud.gov. ACF Tech templates should be available.
+An OPS Security Incident Response Plan has been developed and is part of the ATO package. For AMS and Azure responsibilities please see their individual SSPs.
 
 ### Control Origination
 
-Hybrid with ACF Tech and cloud.gov
+Hybrid with ACF Tech and Azure
 
 ### Related Content
 
