--- a/docs/Security-Compliance/Security-Controls/ma/ma-02.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-02.md
@@ -15,11 +15,11 @@ f. Include the following information in organizational maintenance records: [Dat
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Hybrid with OPS and IaaS vendor
+ACF Tech (for GFE) and Azure
 
 ### Related Content
 Note: For systems categorized as Moderate or High, maintenance records should include: (i) the date and time of maintenance; (ii) the name of the individual performing the maintenance; (iii) the name of escort, if necessary; (iv) a description of the maintenance performed; and (v) a list of equipment removed and replaced (including identification numbers, if applicable). For systems categorized as High, ensure automated mechanisms are employed to schedule, conduct, and document any maintenance and repairs as required.
