--- a/docs/Security-Compliance/Security-Controls/ma/ma-03-1.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-03-1.md
@@ -5,10 +5,10 @@ Inspect the maintenance tools used by maintenance personnel for improper or unau
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from ACF Tech (AMS) and Hybrid with IaaS vendor
+ACF Tech and Azure
 
 ### Related Content
