--- a/docs/Security-Compliance/Security-Controls/ma/ma-03.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-03.md
@@ -7,10 +7,10 @@ b. Review previously approved system maintenance tools [within ACF-defined frequ
 
 ## OPS Implementation
 
-TODO: seek inherited text. Generate some text of access control around IaaS tool usage and access
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from ACF Tech (AMS) and Hybrid with IaaS vendor
+ACF Tech and Azure
 
 ### Related Content
