--- a/docs/Security-Compliance/Security-Controls/ma/ma-04.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-04.md
@@ -13,11 +13,11 @@ e. Terminate session and network connections when nonlocal maintenance is comple
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from ACF Tech (AMS) and IaaS vendor
+ACF Tech and Azure
 
 ### Related Content
 
