--- a/docs/Security-Compliance/Security-Controls/ma/ma-05.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-05.md
@@ -9,10 +9,10 @@ c. Designate organizational personnel with required access authorizations and te
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from IaaS vendor and ACF Tech (AMS)
+ACF Tech and Azure
 
 ### Related Content
