--- a/docs/Security-Compliance/Security-Controls/ma/ma-06.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-06.md
@@ -5,10 +5,10 @@ Obtain maintenance support and/or spare parts for [key information system compon
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-OPS, Hybrid with IaaS provider, and inherited from ACF Tech (AMS)
+ACF Tech and Azure
 
 ### Related Content
