--- a/docs/Security-Compliance/Security-Controls/mp/mp-02.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-02.md
@@ -7,10 +7,8 @@ Restrict access to [digital and non-digital media pursuant to Appendix I of the 
 
 OPS does not make use of any digital or non-digital media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
