--- a/docs/Security-Compliance/Security-Controls/mp/mp-03.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-03.md
@@ -9,10 +9,8 @@ b. Exempt [All media and hardware] from marking if the media remain within [a ce
 
 OPS does not make use of any system or digital media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
