--- a/docs/Security-Compliance/Security-Controls/mp/mp-04.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-04.md
@@ -9,10 +9,8 @@ b. Protect system media types defined in MP-4a until the media are destroyed or 
 
 OPS does not make use of any digital or non-digital media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
