--- a/docs/Security-Compliance/Security-Controls/mp/mp-05.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-05.md
@@ -10,10 +10,8 @@ d. Restrict the activities associated with the transport of system media to auth
 
 OPS does not make use of any system media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
