--- a/docs/Security-Compliance/Security-Controls/mp/mp-07.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-07.md
@@ -9,10 +9,8 @@ b. Prohibit the use of portable storage devices in organizational systems when s
 
 OPS does not make use of any system media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
