--- a/docs/Security-Compliance/Security-Controls/pl/pl-04-1.md
+++ b/docs/Security-Compliance/Security-Controls/pl/pl-04-1.md
@@ -8,10 +8,10 @@ Include in the rules of behavior, restrictions on:<br />
 
 ## OPS Implementation
 
-TODO: Seek inherited text. IaaS provider ?
+Inherited from HHS
 
 ### Control Origination
 
-Inherited from HHS/ACF
+HHS
 
 ### Related Content
