--- a/docs/Security-Compliance/Security-Controls/pl/pl-04.md
+++ b/docs/Security-Compliance/Security-Controls/pl/pl-04.md
@@ -11,10 +11,10 @@ Note: HHS has established the HHS Rules of Behavior for Use of HHS Information a
 
 ## OPS Implementation
 
-TODO: Seek inherited text. IaaS provider ?
+Inherited from HHS
 
 ### Control Origination
 
-Inherited from HHS/ACF
+HHS
 
 ### Related Content
