--- a/docs/Security-Compliance/Security-Controls/pl/pl-08.md
+++ b/docs/Security-Compliance/Security-Controls/pl/pl-08.md
@@ -15,11 +15,11 @@ d. Ensures that the planned information security architecture is consistent with
 
 ## OPS Implementation
 
-TODO: seek inherited text. Refer to architecture and boundary diagrams and describe it
+The OPS boundary diagram and architecture drawings are part of the OPS ATO package.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with Azure, ACF Tech (AMS), and OPS.
 
 ### Related Content
 
