--- a/docs/Security-Compliance/Security-Controls/pl/pl-10.md
+++ b/docs/Security-Compliance/Security-Controls/pl/pl-10.md
@@ -5,10 +5,10 @@ Select a control baseline for the system.
 
 ## OPS Implementation
 
-OPS uses the Moderate and Privacy baselines
+OPS uses or references the approved HHS/ACF Tech Moderate Security and Privacy baselines
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with Azure and OPS. Inherited from ACF Tech (AMS)
 
 ### Related Content
