--- a/docs/Security-Compliance/Security-Controls/pl/pl-11.md
+++ b/docs/Security-Compliance/Security-Controls/pl/pl-11.md
@@ -9,6 +9,6 @@ OPS has included applicable and selected controls and provided implementation te
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+OPS
 
 ### Related Content
