--- a/docs/Security-Compliance/Security-Controls/ps/ps-02.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-02.md
@@ -13,7 +13,7 @@ e. Review and update position risk designations [at least within three years or 
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from HHS/ACF/OPRE
 
 ### Control Origination
 
