--- a/docs/Security-Compliance/Security-Controls/ps/ps-03.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-03.md
@@ -10,15 +10,16 @@ c. Conducts background investigations in a manner commensurate with OPM and HHS 
 d. Performs reinvestigations in accordance with guidance provided by current personnel security policy; and
 
 e. Refuses employees and contractors access to information systems until they have:<br />
-1. Been granted an interim clearance, and
+1. Been granted an interim clearance, and<br />
 2. Signed the appropriate access agreements.
 
 ## OPS Implementation
 
-TODO: seek inherited text
+e. The plan document artifact is secured under the auspices of ACF Tech policies and enforcement.
+
 
 ### Control Origination
 
-Inherited from HHS/ACF/OPRE
+Inherited from HHS
 
 ### Related Content
