--- a/docs/Security-Compliance/Security-Controls/ps/ps-05.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-05.md
@@ -11,12 +11,10 @@ d. Notify [management personnel, systems administrators, physical security perso
 
 ## OPS Implementation
 
-A system admin will alter user authorization within OPS within the required timeframe after receiving a qualified notification.
-
-TODO: seek inherited text
+An OPS user admin will alter user authorization within OPS within the required timeframe after receiving a qualified notification.
 
 ### Control Origination
 
-Hybrid with OPS, HHS/ACF/OPRE, and ACF Tech
+Hybrid with OPS and HHS/ACF/OPRE
 
 ### Related Content
