--- a/docs/Security-Compliance/Security-Controls/ps/ps-06.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-06.md
@@ -6,15 +6,15 @@ a. Develop and document access agreements for organizational systems;
 b. Review and update the access agreements [at least every 365 days or whenever there is a significant change to the information system or information being processed; and whenever there is a change to the agreements’ verbiage]; and
 
 c. Verify that individuals requiring access to organizational information and systems:<br />
-1. Sign appropriate access agreements prior to being granted access; and
+1. Sign appropriate access agreements prior to being granted access; and<br />
 2. Re-sign access agreements to maintain access to organizational systems when access agreements have been updated or [at least every 365 days].
 
 ## OPS Implementation
 
-TODO: seek inherited text on [HHS RoB](https://www.hhs.gov/sites/default/files/rules-of-behavior.pdf)
+[HHS RoB](https://www.hhs.gov/sites/default/files/rules-of-behavior.pdf)
 
 ### Control Origination
 
-Inherited from HHS/ACF/OPRE
+HHS
 
 ### Related Content
