--- a/docs/Security-Compliance/Security-Controls/ps/ps-07.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-07.md
@@ -16,11 +16,11 @@ e. Monitor provider compliance with personnel security requirements.
 
 ## OPS Implementation
 
-TODO: Seek inherited text from IaaS provider
+Inherited from Azure and ACF Tech (AMS)
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from Azure and ACF Tech (AMS)
 
 ### Related Content
 
