--- a/docs/Security-Compliance/Security-Controls/ps/ps-08.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-08.md
@@ -10,7 +10,7 @@ b. Notify [management personnel, systems administrators, physical security perso
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from HHS/ACF/OPRE
 
 ### Control Origination
 
