--- a/docs/Security-Compliance/Security-Controls/ps/ps-09.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-09.md
@@ -5,7 +5,7 @@ Incorporate security and privacy roles and responsibilities into organizational 
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from HHS/ACF/OPRE
 
 ### Control Origination
 
