--- a/docs/Security-Compliance/Security-Controls/ir/ir-04-1.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-04-1.md
@@ -8,9 +8,10 @@ Support the incident handling process using [ACF-defined automated mechanisms].
 This control is inherited from ACF Tech and Azure. For OPS, the ACF Tech Service Desk and IRT maintain the incident ticketing systems to receive, track, analyze and report all IT security and privacy incidents. ACF Tech also manages, tracks, and monitors all devices suspected to be compromised or involved in the security incident. For more details, please see the OPS Incident Response Plan and the Azure SSP. 
 
 
+
 ### Control Origination
 
-Hybrid with ACF Tech  and Azure
+Inherited from ACF Tech  and Azure
 
 ### Related Content
 
