--- a/docs/Security-Compliance/Security-Controls/ir/ir-06-1.md
+++ b/docs/Security-Compliance/Security-Controls/ir/ir-06-1.md
@@ -5,11 +5,11 @@ Report incidents using [ACF-defined automated mechanisms].
 
 ## OPS Implementation
 
-cloud.gov trouble/incident tickets can provide awareness and reporting at that layer. OPS implements or inherits required automation mechanisms defined by cloud.gov and ACF/OCIO.
+All OPS personnel will follow ACF Tech Incident Report Policy requirements for timely reporting incidents to Report incident information to ACF_IRT@acf.hhs.gov. This is described in detail in the OPS Security Incident Response Plan which is also part of the ATO package. For AMS and Azure responsibilities please see their individual SSPs. 
 
 ### Control Origination
 
-Hybrid with cloud.gov and ACF/OCIO
+Hybrid with ACF Tech and Azure
 
 ### Related Content
 
