--- a/docs/Security-Compliance/Security-Controls/ma/ma-03-2.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-03-2.md
@@ -5,10 +5,10 @@ Check media containing diagnostic and test programs for malicious code before th
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from ACF Tech (AMS) and Hybrid with IaaS vendor
+ACF Tech and Azure
 
 ### Related Content
