--- a/docs/Security-Compliance/Security-Controls/ma/ma-03-3.md
+++ b/docs/Security-Compliance/Security-Controls/ma/ma-03-3.md
@@ -13,10 +13,10 @@ Prevent the removal of maintenance equipment containing organizational informati
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Inherited from ACF Tech (AMS) and Hybrid with IaaS vendor
+ACF Tech and Azure
 
 ### Related Content
