--- a/docs/Security-Compliance/Security-Controls/mp/mp-06.md
+++ b/docs/Security-Compliance/Security-Controls/mp/mp-06.md
@@ -9,10 +9,8 @@ b. Employ sanitization mechanisms with the strength and integrity commensurate w
 
 OPS does not make use of any system media.
 
-TODO: Seek inherited text.
-
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Azure
 
 ### Related Content
