--- a/docs/Security-Compliance/Security-Controls/ps/ps-04.md
+++ b/docs/Security-Compliance/Security-Controls/ps/ps-04.md
@@ -14,13 +14,11 @@ e. Retain access to organizational information and systems formerly controlled b
 
 ## OPS Implementation
 
-a, b. A system admin will revoke user authorization within OPS within the required timeframe after receiving a qualified notification.
-
-TODO: seek inherited text
+Parts (a and b): An OPS User Admin will revoke user authorization within OPS within the required timeframe after receiving a qualified authorized notification.
 
 ### Control Origination
 
-Hybrid with OPS, HHS/ACF/OPRE, and ACF Tech
+Hybrid with OPS and HHS/ACF/OPRE
 
 ### Related Content
 
