adding working session progress

--- a/docs/Security-Compliance/Security-Controls/pt/pt-02.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-02.md
@@ -9,6 +9,6 @@ b. Restrict the [ACF-defined processing] of personally identifiable information 
 
 ### Control Origination
 
-Inherited from HHS/ACF/OPRE
+Fully inherited from HHS/ACF/OPRE
 
 ### Related Content
