--- a/docs/Security-Compliance/Security-Controls/pt/pt-03.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-03.md
@@ -11,18 +11,20 @@ d. Monitor changes in processing personally identifiable information and impleme
 
 ## OPS Implementation
 
-The overall purpose of OPS is to track OPRE's funding and the vehicle through which that money was spent (e.g., contract).
+a. The overall purpose of OPS is to track OPRE's funding and the vehicle through which that money was spent (e.g., contract).
 
 The PII about the system users (e.g., budget staff, system administrators) is collected and used to manage their accounts and authenticate them during the log in process.
 
-The PII about the vendor representatives is collected and used to contact the relevant individual if there is an issue with an invoice.
+The COR certificates may be attached to acquisition requests when required. More information can be found in the Privacy Impact Assessment (PIA).
 
-The COR certificates may be attached to acquisition requests when required by PSC. More information can be found in the Privacy Impact Assessment (PIA).
+b. N/A
 
-b. TODO: ???
+c. PII is restricted only to that which is compatible for the purposes defined above.
+
+d. Any potential changes in processing any PII are reviewed periodically through other routine review processes.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with HHS and ACF Tech
 
 ### Related Content
