--- a/docs/Security-Compliance/Security-Controls/pt/pt-04.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-04.md
@@ -5,10 +5,10 @@ Implement [ACF-defined tools or mechanisms] for individuals to consent to the pr
 
 ## OPS Implementation
 
-TODO: reference global banner/footer text
+The ACF-mandated banner and disclaimer displayed before accessing OPS addresses this consent. See the Privacy Impact Analysis (PIA) for more information.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with OPS and ACF Tech
 
 ### Related Content
