--- a/docs/Security-Compliance/Security-Controls/pt/pt-05-2.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-05-2.md
@@ -5,10 +5,10 @@ Include Privacy Act statements on forms that collect information that will be ma
 
 ## OPS Implementation
 
-TODO: Reference footer/banner
+OPS provides notice to the users by referencing the ACF privacy policy before users access OPS.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with OPS and ACF Tech
 
 ### Related Content
