--- a/docs/Security-Compliance/Security-Controls/pt/pt-05.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-05.md
@@ -15,9 +15,10 @@ e. Includes [ACF-defined information, including a point of contact for the indiv
 
 ## OPS Implementation
 
-TODO: Reference footer/banner
+OPS provides notice to the users by referencing the ACF privacy policy before users access OPS.
 
 ### Control Origination
 
+Hybrid with OPS and ACF Tech
 
 ### Related Content
