--- a/docs/Security-Compliance/Security-Controls/pt/pt-07-1.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-07-1.md
@@ -11,7 +11,7 @@ When a system processes Social Security numbers:
 
 ## OPS Implementation
 
-OPS does not intend to collect or store SSNs. If one is utilized as a Taxpayer Identification Number (TIN) for purposes of vendor invoicing, it could potentially be included. More information can be found in the Privacy Impact Assessment (PIA).
+OPS does not intend to collect or store SSNs. More information can be found in the Privacy Impact Assessment (PIA).
 
 ### Control Origination
 
