--- a/docs/Security-Compliance/Security-Controls/pt/pt-07-2.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-07-2.md
@@ -5,7 +5,10 @@ Prohibit the processing of information describing how any individual exercises r
 
 ## OPS Implementation
 
+Not Applicable
+
 ### Control Origination
 
+Not Applicable
 
 ### Related Content
