--- a/docs/Security-Compliance/Security-Controls/pt/pt-07.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-07.md
@@ -5,9 +5,10 @@ Apply [ACF-defined processing conditions] for specific categories of personally 
 
 ## OPS Implementation
 
-TODO: Seek ACF Tech conditions for our categories referenced in PIA ???
+There are no particular conditions or requirements for the PII categories used by OPS. See the PIA for more information.
 
 ### Control Origination
 
+Not Applicable
 
 ### Related Content
