--- a/docs/Security-Compliance/Security-Controls/pt/pt-08.md
+++ b/docs/Security-Compliance/Security-Controls/pt/pt-08.md
@@ -15,11 +15,10 @@ e. Provide individuals with notice and an opportunity to contest the findings be
 
 ## OPS Implementation
 
-N/A
-
-TODO: ???
+Fully inherited from ACF Tech
 
 ### Control Origination
 
+ACF Tech
 
 ### Related Content
