--- a/docs/Security-Compliance/Security-Controls/ra/ra-03-1.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-03-1.md
@@ -7,15 +7,11 @@
 
 ## OPS Implementation
 
-OPS utilizes vulnerability scanning of sotfware dependencies in our supply chain using tools including but not limited to Renovatebot and Dependabot.  Both of these tools will automatically open Pull Requests if there is a dependency to be upgraded as a result of a vulnerability or risk in dependencies in the software supply chain. If there are no findings, no Pull Requests will be opened.  Semgrep and CodeQL scans are the last step for each CI run.  If vulnerabilities are found in the scan results, the code will be prevented from being deployed until the vulnerabilities are remediated.
-
-TODO: Reference VMP
-
-TODO: Give evidence of the SBOM we produce in pipeline
+Inherited from HHS/ACF Tech
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Inherited from Azure and ACF Tech
 
 ### Related Content
 
