--- a/docs/Security-Compliance/Security-Controls/ra/ra-03.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-03.md
@@ -19,11 +19,11 @@ f. Update the risk assessment [before issuing a new Authority to Operate/authori
 
 ## OPS Implementation
 
-TODO: need the template
+The ATO process is part of the risk assessment. OPS has completed the three-year ATO security control assessment as part of this control's requirement.
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Hybrid with Azure, ACF Tech, and OPS
 
 ### Related Content
 
