--- a/docs/Security-Compliance/Security-Controls/ra/ra-05-11.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-05-11.md
@@ -9,7 +9,7 @@ OPS utilizes and defers to the [HHS Vulnerability Disclosure Policy](https://www
 
 ### Control Origination:
 
-Hybrid with IaaS provider and ACF Tech
+Hybrid with Azure and ACF Tech
 
 ### Related Content
 
