--- a/docs/Security-Compliance/Security-Controls/ra/ra-05-2.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-05-2.md
@@ -5,11 +5,11 @@ Update the system vulnerabilities to be scanned [at least every 30 days, immedia
 
 ### OPS Implementation
 
-TODO: Text about how GH and renovatebot does checking of vulns
+Inherited from ACF Tech
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Inherited from ACF Tech
 
 ### Related Content
 
