--- a/docs/Security-Compliance/Security-Controls/ra/ra-05-5.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-05-5.md
@@ -5,13 +5,11 @@ Implement privileged access authorization to [ACF-defined lists of information s
 
 ### OPS Implementation
 
-TODO: generate text
-
-TODO: What is the defined list of components ?
+Fully inherited from ACF Tech
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+ACF Tech
 
 ### Related Content
 
