--- a/docs/Security-Compliance/Security-Controls/ra/ra-05.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-05.md
@@ -21,7 +21,7 @@ f. Employ vulnerability monitoring tools that include the capability to readily 
 
 Part (a): As OPS  is hosted in the ACF Tech-managed Azure Tenant Environment, ACF Tech conducts required scans on a monthly frequency and any time when new vulnerabilities potentially affecting the system are identified and reported. 
 
-These scans include Bi-monthly system level vulnerability scans, Monthly Dynamic application scans, yearly SYNACK penetration tests. In addition, Automated scans are run on every push, pull request, and merge on GitHub at the OPS application level. The first initial scans for OPS have been planned by the ACF Tech ISSE. See Please see POA&M# OPS-RA-05. 
+These scans include Bi-monthly system level vulnerability scans, Monthly Dynamic application scans, yearly SYNACK penetration tests. In addition, Automated scans are run on every push, pull request, and merge on GitHub at the OPS application level.  See Please see POA&M documentation. 
 
 Part (b,1-3): The ACF Tech System Scanning Requirements 2024 document and the OPS Configuration Management Plan documents in detail the tools, techniques, and processes involved in vulnerability management.
 
