--- a/docs/Security-Compliance/Security-Controls/ra/ra-07.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-07.md
@@ -5,10 +5,10 @@ Respond to findings from security and privacy assessments, monitoring, and audit
 
 ## OPS Implementation
 
-OPS follows and abides by HHS and ACF Tech response policy
+OPS follows and abides by HHS and ACF Tech Incident Response policy. POA&M documentation also outlines response to identified risks as per the HHS/ACF remediation timeline requirements.
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Hybrid with Azure, ACF Tech, and OPS
 
 ### Related Content
