--- a/docs/Security-Compliance/Security-Controls/ra/ra-09.md
+++ b/docs/Security-Compliance/Security-Controls/ra/ra-09.md
@@ -5,10 +5,10 @@ Identify critical system components and functions by performing a criticality an
 
 ## OPS Implementation
 
-TODO: Utilize template for OPS
+Inherited from Azure and ACF Tech
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Hybrid with Azure and ACF Tech
 
 ### Related Content
