--- a/docs/Security-Compliance/Security-Controls/sa/sa-02.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-02.md
@@ -9,14 +9,14 @@ c. Establish a discrete line item for information security and privacy in organi
 
 ## OPS Implementation
 
-TODO: find template(s) or documents we can inherit and link to from HHS/ACF. This seems more OPRE policy/documentation focused ?
+Inherited from ACF Tech.
 
-TODO: ACF Privacy Policy should dicated the privacy requirements?
+HHS Privacy Policy dicates the privacy requirements.
 
-[ACF Privacy Policy](https://www.acf.hhs.gov/privacy-policy)
+[ACF Privacy Policy](https://acf.gov/privacy-policy)
 
 ### Control Origination:
 
-Hybrid with HHS/ACF/OPRE, ACF Tech, and OPS
+Inherited from ACF Tech
 
 ### Related Content
