--- a/docs/Security-Compliance/Security-Controls/sa/sa-03.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-03.md
@@ -20,21 +20,15 @@ a. OPS is developed using Agile software development principles. As part of this
 
 b.
 
-ISSO
-ACF Security Engineer
-System Owner
-OPRE Tech Lead
+ISSO<br />
+ACF Security Engineer<br />
+System Owner<br />
+OPRE Tech Lead<br />
 Vendor Tech Lead
 
-c. The following individuals
+c. OPS has identified individual roles during the SDLC process. See the governance and ATO process documentation for more information on the named individuals.
 
-- ISSO is Ashley Montgomery
-- ACF Security Engineer is Clinton Jackson
-- System Owner is
-- OPRE Tech Lead
-- Vendor Tech Lead is
-
-d. TODO: seek some text or templates from ACF Tech
+d. See the governance and ATO process documentation
 
 ### Control Origination:
 
