--- a/docs/Security-Compliance/Security-Controls/sa/sa-04-1.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-04-1.md
@@ -5,7 +5,7 @@ Require the developer of the system, system component, or system service to prov
 
 ## OPS Implementation
 
-TODO: find template
+See the [Statement of Objectives](https://github.com/HHS/OPRE-OPS/wiki/files/Attachment%201%20-%20Statement%20of%20Objectives%20(03_25_2022)%20(1).pdf) and [other ACF Tech requirements](https://github.com/HHS/OPRE-OPS/wiki/files/Attachment%205%20-%20ACF%20Security%20Privacy%20and%20Task%20Standard%20Language%20for%20Acquisitions%20(03_25_2022)%20(1).pdf) for OPS
 
 ### Control Origination:
 
