--- a/docs/Security-Compliance/Security-Controls/sa/sa-04-2.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-04-2.md
@@ -9,14 +9,12 @@ Require the developer of the system, system component, or system service to prov
 
 ## OPS Implementation
 
-TODO: find template on the source code aspect particularly
+Detailed implementation of security-relevant and external interfaces information can be found in multiple documents that are part of the ATO documentation and also found within the GitHub repositories.
 
-Boundry and dataflow diagrams can be found [here](../../)
-
-TODO: Update with specific links when ready
+Boundary and dataflow diagrams can be found [here](../../)
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Hybrid with Azure, ACF Tech, and OPS
 
 ### Related Content
