--- a/docs/Security-Compliance/Security-Controls/sa/sa-04-9.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-04-9.md
@@ -5,12 +5,10 @@ Require the developer of the system, system component, or system service to iden
 
 ## OPS Implementation
 
-TODO: find fedramp template
-
-TODO: Seek inherited materials
+Detailed implementation of functions, ports, and services intended for use can be found in the Configuration Management Plan document, which is part of the ATO package.
 
 ### Control Origination:
 
-Hybrid with IaaS provider, ACF Tech, and OPS
+Hybrid with ACF Tech and OPS
 
 ### Related Content
