--- a/docs/Security-Compliance/Security-Controls/sa/sa-04.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-04.md
@@ -19,7 +19,7 @@ The afore-mentioned requirements, descriptions, and criteria are referenced in [
 
 ### Control Origination:
 
-Hybrid with ACF Tech and OPS
+Fully Inherited from ACF Tech
 
 ### Related Content
 
